--- a/app/views/skm/entry_statuses/show.html.erb
+++ b/app/views/skm/entry_statuses/show.html.erb
@@ -1,40 +1,36 @@
 <%= page_title %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_entry_status) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id =>  @entry_status},:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_status) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @entry_status}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_status_code)%></label></td>
+            <td class="data-col"><%= @entry_status[:entry_status_code]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-col"><%= @entry_status[:name]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:description)%></label></td>
+            <td class="data-col"><%= @entry_status[:description]%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_status_visiable)%></label></td>
+            <td class="data-col"><%= check_img(@entry_status.visiable_flag)%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_status_code)%></label></td>
-              <td class="data2Col"><%= @setting.entry_status_code%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="data2Col"><%= @setting[:name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:description)%></label></td>
-              <td class="data2Col"><%= @setting[:description]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_status_visiable)%></label></td>
-              <td class="data2Col"><%= @entry_status.visiable_flag%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
