--- a/app/views/reports/icm_first_line_solved/_mail.html.erb
+++ b/app/views/reports/icm_first_line_solved/_mail.html.erb
@@ -1,20 +1,24 @@
-<div id="reportChart"></div>
+<style type="text/css">
+  table#reportData td,th{
+       padding: 3px 2px 3px 5px;
+  }
+</style>
+
 
 <!--  irm datatable      -->
  <div class="irm-datatable">
    <div>
        <table count="<%=datas[:datas].size%>">
          <thead>
-         <tr>
-           <th><%=t(:label_report_icm_incident_report_date)+':'+Date.today.to_s  %>
-             <br/>
-             <%= "#{t(:label_statistic_date)}:#{datas[:params][:year]}-#{datas[:params][:month]}"%>
-           </th>
-           <th></th>
-           <th></th>
-           <th></th>
-         </tr>
            <tr>
+             <th><%=t(:label_report_icm_incident_report_date)+':'+Date.today.to_s  %></th>
+             <th style="text-align:center" colspan=<%=datas[:headers].length%>><%=t(:label_report_icm_incident_prior) %></th>
+             <th><%=t(:label_report_icm_incident_total)  %></th>
+           </tr>
+           <tr>
+             <th >
+               <div><%= t(:label_report_icm_incident_params_month) %></div>
+             </th>
              <% 0.upto(datas[:headers].length-1) do |index| %>
                <th >
                  <div><%= datas[:headers][index] %></div>
@@ -26,7 +30,7 @@
          <tbody>
          <% datas[:datas].each do |data| %>
            <tr>
-             <% 0.upto(datas[:headers].length-1) do |index| %>
+             <% 0.upto(datas[:headers].length+1) do |index| %>
                <td>
                  <div>
                    <%= data[index] %>
@@ -40,3 +44,4 @@
    </div>
  </div>
 <!--  end irm datatable      -->
+
