--- a/app/views/irm/ldap_sources/_data_grid.html.erb
+++ b/app/views/irm/ldap_sources/_data_grid.html.erb
@@ -1,40 +1,20 @@
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_auth_source_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:controller => "irm/ldap_sources", :action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="sourcesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="ldap_sources_list" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "irm/ldap_sources", :action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:controller => "irm/ldap_sources", :action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>          
-        </div>
-        <%= datatable("ldap_sources_list",{:controller => "irm/ldap_sources", :action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                       {:key=>"name",:label=>t(:label_irm_ldap_source_name),:searchable=>true},
-                       {:key=>"host",:label=>t(:label_irm_ldap_source_host),:searchable=>true},
-                       {:key=>"port",:label=>t(:label_irm_ldap_source_port)},
-                       {:key=>"account",:label=>t(:label_irm_ldap_source_account),:searchable=>true},
-                       {:key=>"base_dn",:label=>t(:label_irm_ldap_source_base_dn)},
-                       {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
-                       {:search_box=>"sourcesSearchBox",:paginator_box=>"ldapSourcePaginator"})%>
-        <div id="ldapSourcePaginator"></div>
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_auth_source_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:controller => "irm/ldap_sources", :action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="sourcesSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="channels_list">
+      <%= datatable("ldap_sources_list",{:controller => "irm/ldap_sources", :action=>"get_data",:format=>"json"},[],{:search_box=>"sourcesSearchBox",:paginator_box=>"ldapSourcePaginator"})%>
     </div>
-</div>    
+    <div id="ldapSourcePaginator"></div>
+  </div>
+</div>
