--- a/app/views/irm/ldap_sources/_new_form.html.erb
+++ b/app/views/irm/ldap_sources/_new_form.html.erb
@@ -1,73 +1,66 @@
 <%= common_title %>
-<%= form_for(@ldap_source,:url=>{:action=>"create"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@ldap_source,:url=>{:action=>"create"},:builder => CustomFormBuilder,:html => { :multipart => true }) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_ldap_source_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name,:required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_account)%></label></td>
+            <td class="data-col"><%= f.text_field :account,:required=>true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_host)%></label></td>
+            <td class="data-col"><%=f.text_field :host,:required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_account_password)%></label></td>
+            <td class="data-col"><%= f.password_field :account_password,:required=>true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_port)%></label></td>
+            <td class="data-col"><%=f.text_field :port,:irm_numberonly=>true,:required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_base_dn)%></label></td>
+            <td class="data-col"><%= f.text_field :base_dn,:required=>true%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @ldap_source%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel), {}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_ldap_source_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name,:required=>true%></td>
-              <td class="labelCol"><label><%=t(:label_irm_ldap_source_account)%></label></td>
-              <td class="dataCol"><%= f.text_field :account,:required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_host)%></label></td>
-              <td class="dataCol"><%=f.text_field :host,:required=>true%></td>
-              <td class="labelCol"><%=t(:label_irm_ldap_source_account_password)%></td>
-              <td class="dataCol"><%= f.password_field :account_password,:required=>true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_port)%></label></td>
-              <td class="dataCol"><%=f.text_field :port,:irm_numberonly=>true,:required=>true%></td>
-              <td class="labelCol"><%=t(:label_irm_ldap_source_base_dn)%></td>
-              <td class="dataCol"><%= f.text_field :base_dn,:required=>true%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
 <div id="executeTest"></div>
