--- a/app/views/irm/ldap_sources/show.html.erb
+++ b/app/views/irm/ldap_sources/show.html.erb
@@ -1,56 +1,59 @@
 <%= common_title(:show_data=>@ldap_source.name) %>
 
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header">
+    <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_ldap_source) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= link_to t(:test), {:action => "execute_test",:id=>@ldap_source.id,:format=>:js},{:remote=>true,:class=>"btn btn-primary"}%>
+          <% if @ldap_source.enabled?  %>
+            <%= link_to t(:disable), {:action => "active",:id=>@ldap_source.id,:active=>Irm::Constant::SYS_NO},:class=>"btn"%>
+          <% else %>
+            <%= link_to t(:active), {:action => "active",:id=>@ldap_source.id,:active=>Irm::Constant::SYS_YES},:class=>"btn"%>
+          <% end %>
+          <%= link_to t(:edit), {:action => "edit", :id => @ldap_source},:class=>"btn"%>
+          <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+        </td>
+    </tr>
+  </table>
+  <!-- 一般信息 -->
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title"><h2 class="block-title"><%= t(:label_common_info) %>:</h2></td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_ldap_source) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:test), {:action => "execute_test",:id=>@ldap_source.id,:format=>:js},{:remote=>true}%></div>
-            <% if @ldap_source.enabled?  %>
-              <div class="button"><%= link_to t(:disable), {:action => "active",:id=>@ldap_source.id,:active=>Irm::Constant::SYS_NO}%></div>
-            <% else %>
-              <div class="button"><%= link_to t(:active), {:action => "active",:id=>@ldap_source.id,:active=>Irm::Constant::SYS_YES}%></div>
-            <% end %>
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @ldap_source}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"} %></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_name)%></label></td>
+            <td class="data-col"><%= @ldap_source.name%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_account)%></label></td>
+            <td class="data-col"><%= @ldap_source.account%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_host)%></label></td>
+            <td class="data-col"><%= @ldap_source.host%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_account_password)%></label></td>
+            <td class="data-col">******</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_ldap_source_port)%></label></td>
+            <td class="data-col"><%= @ldap_source.port%></td>
+            <td class="label-col"><label><%=t(:label_irm_ldap_source_base_dn)%></label></td>
+            <td class="data-col"><%= @ldap_source.base_dn%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-col"><%= check_img(@ldap_source.status_code)%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_name)%></label></td>
-              <td class="dataCol"><%= @ldap_source.name%></td>
-              <td class="labelCol"><label><%=t(:label_irm_ldap_source_account)%></label></td>
-              <td class="dataCol"><%= @ldap_source.account%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_host)%></label></td>
-              <td class="dataCol"><%= @ldap_source.host%></td>
-              <td class="labelCol"><%=t(:label_irm_ldap_source_account_password)%></td>
-              <td class="dataCol">******</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_ldap_source_port)%></label></td>
-              <td class="dataCol"><%= @ldap_source.port%></td>
-              <td class="labelCol"><%=t(:label_irm_ldap_source_base_dn)%></td>
-              <td class="dataCol"><%= @ldap_source.base_dn%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="dataCol"><%= check_img(@ldap_source.status_code)%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
 <div id="executeTest"></div>
